微调整样式

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,27 @@
 
 <head>
   <meta charset="utf-8" />
-  <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
   <meta name="viewport"
     content="width=device-width, initial-scale=1, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
   <meta name=" theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <title>NMEFC FCST</title>
+  <script>
+    var _hmt = _hmt || [];
+    _hmt.push(['_requirePlugin', 'UrlChangeTracker', {
+      shouldTrackUrlChange: function (newPath, oldPath) {
+        return newPath && oldPath;
+      }
+    }
+    ]);
+    (function () {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?dd229fe0376190ea704035d12d84aa4e";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
+
 </head>
 
 <body>
